# prompg

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
.github/workflows/: release.yml
config/: metrics.toml
config/prometheus/: prometheus.yml
src/: config.rs  db.rs  main.rs  metrics.rs  state.rs
