[package]
name = "prompg"
version = "0.1.0"
edition = "2021"

[dependencies]
prometheus = "0.13"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-postgres = "0.7.10"
deadpool-postgres = "0.10.5"
config = "0.13.4"
serde = { version = "1.0.198", features = ["derive"] }
dotenvy = "0.15.7"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
log = "0.4"
env_logger = "0.10"
